--- a/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
+++ b/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
@@ -86,7 +86,9 @@
         <!-- 🟢 Zona General -->
         <div class="container-masivos mb-1">
             <div>
-                <label class="tit-promo" style="margin-right: 2rem;">Datos básicos:</label>
+                <label class="tit-promo" style="margin-right: 1rem;">Datos básicos:</label>
+                <label style="margin-right: 10px;">Categoría:</label>
+                <input style="width: 100px; margin-right: 2rem;" type="text" formControlName="categoria">
                 <label style="margin-right: 10px;">Stock Mínimo:</label>
                 <input style="width: 50px; margin-right: 2rem;" type="number" formControlName="stockMinimo">
                 <label style="margin-right: 10px;">Stock Máximo:</label>
