--- a/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
+++ b/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
@@ -5,21 +5,27 @@
         <form [formGroup]="formulario">
             <div class="edit-seccion">
                 <label>Nombre:</label>
-                <input type="text" formControlName="nombre" style="width: 26rem;">
-                <label>Costo:</label>
-                <input type="number" formControlName="costo" style="width: 5rem;" step="0.1">
-                <label>Precio:</label>
-                <input type="number" formControlName="precio" style="width: 5rem;" step="0.1">
+                <input type="text" formControlName="nombre" style="width: 32rem;">
+                <label>Cod. Barras:</label>
+                <input type="text" formControlName="codigoBarras" style="width: 10rem;">
             </div>
             <div class="edit-seccion">
+                <label>Categoría:</label>
+                <input type="text" formControlName="categoria" style="width: 11rem;">
                 <label>Stock Minimo:</label>
-                <input type="number" formControlName="stockMinimo" style="width: 5rem;">
+                <input type="number" formControlName="stockMinimo" style="width: 4rem;">
                 <label>Stock Maximo:</label>
-                <input type="number" formControlName="stockMaximo" style="width: 5rem;">
+                <input type="number" formControlName="stockMaximo" style="width: 4rem;">
+            </div>
+            <div class="edit-seccion">
                 <label>IVA:</label>
                 <input type="checkbox" formControlName="iva">
                 <label>INAPAM:</label>
                 <input type="checkbox" formControlName="descuentoINAPAM">
+                <label>Costo:</label>
+                <input type="number" formControlName="costo" style="width: 5rem;" step="0.1">
+                <label>Precio:</label>
+                <input type="number" formControlName="precio" style="width: 5rem;" step="0.1">
             </div>
             <!-- Lotes -->
             <div formArrayName="lotes">
@@ -103,7 +109,8 @@
 
         <div class="modal-buttons">
             <button class="btn-rojo-chico" (click)="cerrarModal()">Cancelar</button>
-            <button class="btn-verde-chico btn-right" (click)="guardarProducto()" [disabled]="formulario.invalid">Guardar</button>
+            <button class="btn-verde-chico btn-right" (click)="guardarProducto()"
+                [disabled]="formulario.invalid">Guardar</button>
         </div>
 
     </div>
