--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -10,23 +10,6 @@
     </li>
 
     <ul *ngIf="expandedMenu === 'catalogs'" class="submenu">
-      <li class="has-submenu">
-        <span (click)="toggleSubMenu('farmacias')">
-          Farmacias <fa-icon [icon]="'warehouse'" class="menu-icon"></fa-icon>
-          {{ expandedSubMenu === 'farmacias' ? '▲' : '▶' }}
-        </span>
-        <ul *ngIf="expandedSubMenu === 'farmacias'" class="submenu">
-          <li [routerLink]="'/farmacias'" routerLinkActive="active" class="submenu-item">
-            Mantenimiento <fa-icon [icon]="'truck'" class="menu-icon"></fa-icon>
-          </li>
-          <li [routerLink]="'/inventario-farmacias'" routerLinkActive="active" class="submenu-item">
-            Inventario <fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
-          </li>
-        </ul>
-      </li>
-      <li [routerLink]="'/usuarios'" routerLinkActive="active">Usuarios <fa-icon [icon]="'user'"
-          class="menu-icon"></fa-icon></li>
-      <li>Clientes <fa-icon [icon]="'users'" class="menu-icon"></fa-icon></li>
       <li *ngIf="userRol === 'admin'" class="has-submenu">
         <span (click)="toggleSubMenu('almacen')">
           Almacén <fa-icon [icon]="'warehouse'" class="menu-icon"></fa-icon>
@@ -49,10 +32,29 @@
         <fa-icon [icon]="'truck'" class="menu-icon"></fa-icon>
       </li>
 
+
+      <li class="has-submenu">
+        <span (click)="toggleSubMenu('farmacias')">
+          Farmacias <fa-icon [icon]="'warehouse'" class="menu-icon"></fa-icon>
+          {{ expandedSubMenu === 'farmacias' ? '▲' : '▶' }}
+        </span>
+        <ul *ngIf="expandedSubMenu === 'farmacias'" class="submenu">
+          <li [routerLink]="'/farmacias'" routerLinkActive="active" class="submenu-item">
+            Mantenimiento <fa-icon [icon]="'truck'" class="menu-icon"></fa-icon>
+          </li>
+          <li [routerLink]="'/inventario-farmacias'" routerLinkActive="active" class="submenu-item">
+            Inventario <fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
+          </li>
+        </ul>
+      </li>
+      <li [routerLink]="'/usuarios'" routerLinkActive="active">Usuarios <fa-icon [icon]="'user'"
+          class="menu-icon"></fa-icon></li>
+      <li>Clientes <fa-icon [icon]="'users'" class="menu-icon"></fa-icon></li>
+
       <li [routerLink]="'/cortes-de-caja'" routerLinkActive="active">Cortes de caja
         <fa-icon [icon]="'file-signature'" class="menu-icon"></fa-icon>
       </li>
-      
+
     </ul>
 
     <!-- Movimientos -->
@@ -93,7 +95,23 @@
       </span>
     </li>
     <ul *ngIf="expandedMenu === 'reports'" class="submenu">
-      <li>Ventas</li>
+
+
+      <li *ngIf="userRol === 'admin'" class="has-submenu">
+        <span (click)="toggleSubMenu('ventas')">
+          Ventas <fa-icon [icon]="'cash-register'" class="menu-icon"></fa-icon>
+          {{ expandedSubMenu === 'ventas' ? '▲' : '▶' }}
+        </span>
+        <ul *ngIf="expandedSubMenu === 'ventas'" class="submenu">
+          <li [routerLink]="'reporte/ventas-producto'" routerLinkActive="active" class="submenu-item">
+            <span>Un producto<fa-icon [icon]="icons.faReceipt" class="menu-icon"></fa-icon></span>
+          </li>
+          <li [routerLink]="'/reporte/ventas-por-farmacia'" routerLinkActive="active" class="submenu-item">
+            <span>Productos vendidos <fa-icon [icon]="icons.reporteVentas" class="menu-icon"></fa-icon></span>
+          </li>
+        </ul>
+      </li>
+
       <li>Compras</li>
       <li>Balance</li>
     </ul>
